--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   <link rel="stylesheet" href="style/main.css">
 
   <style>
-    /* 🎨 تنسيقات البروجريس */
     .progress-container {
       width: 100%;
       background: #f0f0f0;
@@ -29,6 +28,12 @@
       color: #555;
       margin-top: 6px;
       display: none;
+    }
+    /* تعطيل الزر أثناء الرفع */
+    .btn:disabled {
+      background: #aaa;
+      cursor: not-allowed;
+      opacity: 0.7;
     }
   </style>
 </head>
@@ -52,16 +57,12 @@
         <button id="clearBtn" class="btn btn-muted">تفريغ الحقول</button>
       </div>
 
-      <!-- ✅ البروجريس بار -->
       <div class="progress-container" id="progressContainer">
         <div class="progress-bar" id="progressBar"></div>
       </div>
       <div class="progress-text" id="progressText">جارٍ رفع الصورة...</div>
 
       <div id="info" class="small muted" style="margin-top:10px;"></div>
-      <div class="small muted" style="margin-top:12px;">
-      
-      </div>
     </div>
   </div>
 
@@ -103,7 +104,10 @@
       if (!name) return alert('الرجاء إدخال اسم');
       if (!file) return alert('الرجاء اختيار صورة');
 
-      // ✅ إظهار شريط التقدم
+      // ✅ تعطيل الزر لمنع الضغط المتكرر
+      enterBtn.disabled = true;
+      enterBtn.innerText = 'جاري الرفع...';
+
       progressContainer.style.display = 'block';
       progressText.style.display = 'block';
       progressBar.style.width = '0%';
@@ -115,7 +119,6 @@
         const path = `avatars/${safe}_${stamp}.png`;
         const sRef = storageRef(storage, path);
 
-        // ✅ استخدم uploadBytesResumable للحصول على تقدم الرفع
         const uploadTask = uploadBytesResumable(sRef, file);
 
         uploadTask.on('state_changed', 
@@ -128,11 +131,12 @@
             console.error(error);
             alert('حدث خطأ أثناء رفع الصورة.');
             progressText.innerText = 'فشل الرفع ❌';
+            enterBtn.disabled = false; // ✅ إعادة تفعيل الزر بعد الفشل
+            enterBtn.innerText = 'دخول';
           }, 
           async () => {
             const avatarUrl = await getDownloadURL(uploadTask.snapshot.ref);
 
-            // احفظ المستخدم
             const userRef = push(dbRef(db, 'users'));
             const role = (pass === logo) ? 'مسؤول' : 'طالب';
 
@@ -147,7 +151,6 @@
             const session = { userKey: userRef.key, deviceId, name, avatarUrl, role };
             localStorage.setItem('chat_session', JSON.stringify(session));
 
-            // أضف رسالة انضمام
             const msgRef = push(dbRef(db, 'messages'));
             await set(msgRef, {
               type: 'join',
@@ -166,6 +169,8 @@
         console.error(err);
         alert('حدث خطأ أثناء التسجيل.');
         setInfo('');
+        enterBtn.disabled = false; // ✅ في حال حدوث خطأ عام
+        enterBtn.innerText = 'دخول';
       }
     });
 
@@ -176,6 +181,8 @@
       setInfo('');
       progressContainer.style.display = 'none';
       progressText.style.display = 'none';
+      enterBtn.disabled = false;
+      enterBtn.innerText = 'دخول';
     });
 
     const s = localStorage.getItem('chat_session');
