--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <div class="center-card">
     <div class="card">
       <h2>تسجيل الدخول للدردشة</h2>
-      <p class="muted">أدخل اسمك وصورتك. إن أدخلت كلمة مرور المسؤول ستصبح "مسؤول".</p>
+      <p class="muted">أدخل اسمك وصورتك للدردشة".</p>
 
       <label>الاسم</label>
       <input id="name" type="text" placeholder="اسمك">
