--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <path d="M3 6C3 4.895 3.895 4 5 4h13v13a1 1 0 0 1-1 1H6c-.552 0-1-.448-1-1V6z" fill="white" opacity="0.95"/>
             <path d="M8 4v14" stroke="rgba(0,0,0,0.08)" stroke-width="1.2" />
           </svg>
-          ابدء من هنا
+         ابدء بي التعلم
         </button>
 
         
@@ -153,3 +153,4 @@
  <footer>© 2025 Ishraq Step – جميع الحقوق محفوظة</footer>
 </body>
 </html>
+
