--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <path d="M12 12a4 4 0 1 0 0-8 4 4 0 0 0 0 8z" fill="white" opacity="0.9"/>
             <path d="M3 20c1-4 7-6 9-6s8 2 9 6" stroke="rgba(255,255,255,0.08)" stroke-width="1.6" stroke-linecap="round"/>
           </svg>
-          جروب الدردشه
+          جروب دردشة سوهاج
         </button>
         
       </div>
@@ -153,4 +153,5 @@
  <footer>© 2025 Ishraq Step – جميع الحقوق محفوظة</footer>
 </body>
 </html>
+
 
