--- a/ishraq-step-youtupe.html
+++ b/ishraq-step-youtupe.html
@@ -20,7 +20,7 @@
      <iframe src="https://www.youtube.com/embed/lJcukWy9Z8w?modestbranding=1" allowfullscreen></iframe>
      <h2>كيف يعمل LED</h2>
       <p>
-         يعتبر ال LED من أكثر الإلكترونيات انتشارا حيث يتواجد في اغلب القطع الالكترونية ان لم تكن جميعها، وال led عبارة عن ديود الكتروني باعث للضوء يأتي على عدةٍ من الاشكال والاحجام والألوان المختلفة، ويمتاز عن المصابيح الضوئية بانه يتطلب تيار قليل جدا لتشغيله، حيث يمكنه انتاج كمية من الإضاءة مساوية للمصباح الكهربائي بطاقة اقل بكثير من المصابيح الكهربائية
+         ليد هيا مصابيح كهربائية يوجد منها اكثر من نوع
       </p>
   </div>
 
@@ -83,3 +83,4 @@
 
 </body>
 </html>
+
