--- a/chat/chat.html
+++ b/chat/chat.html
@@ -6,7 +6,6 @@
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
   <link rel="stylesheet" href="style/main.css">
   <style>
-    /* نافذة المنبثقة */
     .user-modal {
       position: fixed;
       inset: 0;
@@ -79,7 +78,6 @@
     </div>
   </div>
 
-  <!-- ✅ النافذة المنبثقة للتحكم بالمستخدم -->
   <div id="userModal" class="user-modal">
     <div class="modal-content">
       <img id="modalAvatar" src="" alt="">
@@ -107,7 +105,6 @@
       onValue
     } from 'https://www.gstatic.com/firebasejs/10.7.1/firebase-database.js';
 
-    // العناصر
     const messagesDiv = document.getElementById('messages');
     const msgText = document.getElementById('msgText');
     const sendBtn = document.getElementById('sendBtn');
@@ -115,8 +112,6 @@
     const logoutBtn = document.getElementById('logoutBtn');
     const adminTools = document.getElementById('adminTools');
     const clearAllBtn = document.getElementById('clearAllBtn');
-
-    // نافذة المستخدم
     const userModal = document.getElementById('userModal');
     const modalAvatar = document.getElementById('modalAvatar');
     const modalName = document.getElementById('modalName');
@@ -124,14 +119,12 @@
     const banToggleBtn = document.getElementById('banToggleBtn');
     const closeModal = document.getElementById('closeModal');
 
-    // الجلسة
     const s = localStorage.getItem('chat_session');
     if (!s) { window.location.href = 'index.html'; throw new Error('No session'); }
     const session = JSON.parse(s);
     let currentUser = session;
     currentUser.deviceId = localStorage.getItem('device_id');
 
-    // عرض المستخدم الحالي
     function renderSession() {
       sessionBox.innerHTML = `
         <div class="session">
@@ -146,14 +139,23 @@
     }
     renderSession();
 
-    // قائمة الحظر
     const bansRef = dbRef(db, 'bans');
     let bans = {};
-    onValue(bansRef, (snap) => {
-      bans = snap.val() || {};
-    });
+    onValue(bansRef, (snap) => { bans = snap.val() || {}; });
 
-    // إرسال الرسائل
+    // ✅ تفعيل الإشعارات
+    if ('Notification' in window) {
+      Notification.requestPermission().then(permission => {
+        if (permission === 'granted') console.log('تم السماح بالإشعارات');
+      });
+    }
+
+    function showNotification(title, body, icon) {
+      if (Notification.permission === 'granted') {
+        new Notification(title, { body, icon });
+      }
+    }
+
     sendBtn.addEventListener('click', async () => {
       if (!currentUser) return alert('سجل الدخول أولاً');
       if (bans[currentUser.deviceId]) return alert('قام المسؤول بحظرك من الدردشة');
@@ -179,20 +181,24 @@
     });
     msgText.addEventListener('keydown', (e) => { if (e.key === 'Enter') sendBtn.click(); });
 
-    // استقبال الرسائل
     const messagesRef = dbRef(db, 'messages');
     onChildAdded(messagesRef, (snap) => {
       const m = snap.val();
       if (!m) return;
-      if (bans[m.deviceId]) return; // لا تظهر رسائل المحظور
+      if (bans[m.deviceId]) return;
       appendMessage(m, snap.key);
+
+      // ✅ إشعار إذا كانت الرسالة من مستخدم آخر
+      if (m.deviceId !== currentUser.deviceId && m.type === 'msg') {
+        showNotification(`${m.name} أرسل رسالة`, m.text, m.avatar || '');
+      }
     });
+
     onChildRemoved(messagesRef, (snap) => {
       const msgEl = document.getElementById(`msg-${snap.key}`);
       if (msgEl) msgEl.remove();
     });
 
-    // 🧩 عرض الرسالة مع زر الصورة لفتح التحكم
     function appendMessage(m, key) {
       const wrap = document.createElement('div');
       wrap.className = 'msg-row';
@@ -202,10 +208,8 @@
       avatar.className = 'avatar';
       avatar.src = m.avatar || '';
       avatar.alt = m.name || '';
-
-      // عند الضغط على الصورة
       avatar.addEventListener('click', () => {
-        if (currentUser.role !== 'مسؤول') return; // فقط المسؤول
+        if (currentUser.role !== 'مسؤول') return;
         openUserModal(m);
       });
 
@@ -223,7 +227,6 @@
       messagesDiv.scrollTop = messagesDiv.scrollHeight;
     }
 
-    // ✅ فتح نافذة المستخدم
     function openUserModal(user) {
       modalAvatar.src = user.avatar || '';
       modalName.innerText = user.name || 'مستخدم';
@@ -254,13 +257,9 @@
       userModal.style.display = 'flex';
     }
 
-    // إغلاق النافذة
     closeModal.addEventListener('click', () => { userModal.style.display = 'none'; });
-    userModal.addEventListener('click', (e) => {
-      if (e.target === userModal) userModal.style.display = 'none';
-    });
+    userModal.addEventListener('click', (e) => { if (e.target === userModal) userModal.style.display = 'none'; });
 
-    // حذف الكل
     clearAllBtn.addEventListener('click', async () => {
       if (currentUser.role !== 'مسؤول') return alert('فقط المسؤول');
       if (!confirm('هل تريد حذف كل الرسائل؟')) return;
@@ -270,7 +269,6 @@
       } catch (err) { console.error(err); }
     });
 
-    // تسجيل الخروج
     logoutBtn.addEventListener('click', async () => {
       try {
         const mRef = push(dbRef(db, 'messages'));
@@ -287,7 +285,6 @@
       window.location.href = 'index.html';
     });
 
-    // أدوات مساعدة
     function escapeHtml(text){ if(!text) return ''; return text.replace(/&/g,'&amp;').replace(/</g,'&lt;').replace(/>/g,'&gt;'); }
 
     async function trimMessagesIfNeeded() {
@@ -297,7 +294,6 @@
         if (!snap.exists()) return;
         const data = snap.val();
         const keys = Object.keys(data);
-        //لا تكثر من الطعام
         if (keys.length <= 10) return;
         const removeCount = keys.length - 10;
         const q2 = query(dbRef(db, 'messages'), orderByChild('timestamp'), limitToFirst(removeCount));
@@ -313,5 +309,4 @@
     setInterval(() => { trimMessagesIfNeeded(); }, 10000);
   </script>
 </body>
-
 </html>
