--- a/ishraq-step-main/ishraq-step-cours.html
+++ b/ishraq-step-main/ishraq-step-cours.html
@@ -23,22 +23,15 @@
       </a>
       
       
-      <a href="ishraq-step-code.html">
+      <a href="#">
          <span></span>
          <span></span>
          <span></span>
          <span></span>
-          شرح اساسيات البرمجه و الدوئر
+          الكتب الالكترونيه قريبا
       </a>
 
-      <a href="https://gemini.google.com/app">
-         <span></span>
-         <span></span>
-         <span></span>
-         <span></span>
-          اسئل الذكاء الاصطناعي عن اي شئ
-      </a>
-
+   
       <p>لديك خبره في اي لغة برمج كون فريق عن طريق </p>
       <p>الانضمام الينا انقر على انضم الينا و اصنع مشروع</p>
       <a href="https://wa.me/+201012631782?text=مرحبا%20اريد%20الانضمام%20الى%20فريق%20اشراق%20ستيب" target="_blank" rel="noopener noreferrer">
@@ -54,4 +47,5 @@
 
 </div>
 </body>
+
 </html>
