--- a/ishraq-step-main/ishraq-step-youtupe.html
+++ b/ishraq-step-main/ishraq-step-youtupe.html
@@ -67,7 +67,7 @@
 
 <!-- 🧭 الأقسام السبعة -->
 <div id="sections-container" class="sections">
-  <div class="section-card" data-type="ماث 0">🧮 ماث 0</div>
+  <div class="section-card" data-type="math0">🧮 ماث 0</div>
   <div class="section-card" data-type="ماث 1">🧮 ماث 1</div>
   <div class="section-card" data-type="انجليزي">🇬🇧 إنجليزي</div>
   <div class="section-card" data-type="دوائر كهربائية">🔌 دوائر كهربائية</div>
