--- a/ishraq-step-main/ishraq-step-youtupe.html
+++ b/ishraq-step-main/ishraq-step-youtupe.html
@@ -85,7 +85,6 @@
 
 <footer>© 2025 Ishraq Step – جميع الحقوق محفوظة</footer>
 
-<!-- Firebase -->
 <script type="module">
   import { db } from './chat/js/fb.js';
   import { ref, onValue } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-database.js";
@@ -97,16 +96,30 @@
   const backBtn = document.querySelector('.back-btn');
 
   let coursesData = {};
+  let dataLoaded = false; // 🟡 حالة تحميل البيانات
 
-  // 🧠 تحميل كل الفيديوهات مرة واحدة من Firebase
+  // ✅ تحميل البيانات من Firebase
   onValue(ref(db, 'courses'), snapshot => {
-    coursesData = snapshot.val() || {};
+    if (snapshot.exists()) {
+      coursesData = snapshot.val();
+      dataLoaded = true;
+      console.log("✅ تم تحميل البيانات:", coursesData);
+    } else {
+      console.warn("⚠️ لا توجد بيانات في المسار 'courses'.");
+    }
+  }, error => {
+    console.error("❌ خطأ أثناء الاتصال بقاعدة البيانات:", error);
   });
 
   // 📌 عند الضغط على قسم
   document.querySelectorAll('.section-card').forEach(card => {
     card.addEventListener('click', () => {
+      if (!dataLoaded) {
+        alert("⏳ يرجى الانتظار قليلاً... يتم تحميل البيانات من الخادم");
+        return;
+      }
       const type = card.dataset.type;
+      console.log("🟡 القسم المختار:", type);
       showSectionVideos(type);
     });
   });
@@ -116,10 +129,13 @@
     sectionsContainer.style.display = 'none';
     videosContainer.style.display = 'block';
     sectionTitle.textContent = `🎓 ${type}`;
-
     videosList.innerHTML = '';
 
-    const filtered = Object.values(coursesData).filter(item => item.type === type);
+    const filtered = Object.values(coursesData).filter(
+      item => item.type?.trim() === type.trim()
+    );
+
+    console.log(`📌 عدد الفيديوهات في ${type}:`, filtered.length);
 
     if (filtered.length === 0) {
       videosList.innerHTML = '<p>🚧 لا توجد فيديوهات بعد لهذا القسم</p>';
@@ -147,5 +163,7 @@
   });
 </script>
 
+
 </body>
 </html>
+
