Fix HTML encoding issues in chat.html

--- a/ishraq-step-main/chat/chat.html
+++ b/ishraq-step-main/chat/chat.html
@@ -281,7 +281,7 @@
         });
       } catch(e){}
       localStorage.removeItem('chat_session');
-      window.location.href = 'index.html';
+      window.location.href = 'https://markadmi.github.io/ishraq-step/';
     });
 
     function escapeHtml(text){
@@ -314,4 +314,5 @@
   </script>
 </body>
 </html>
+
 
