--- a/ishraq-step-main/index.html
+++ b/ishraq-step-main/index.html
@@ -8,7 +8,12 @@
   <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;600;800&display=swap" rel="stylesheet">
   <link href="css/colors.css" rel="stylesheet">
   <link rel="icon" href="icon.jpg" type="image/x-icon">
-    
+
+  <!--ads-->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4496926993663116"
+     crossorigin="anonymous">
+      </script>
+  
 </head>
 <body>
   <main class="container" role="main" aria-labelledby="main-title">
@@ -153,5 +158,6 @@
  <footer>© 2025 Ishraq Step – جميع الحقوق محفوظة</footer>
 </body>
 </html>
+
 
 
