--- a/index.html
+++ b/index.html
@@ -80,6 +80,10 @@
       to { width: 100%; }
     }
   </style>
+   <!--ads-->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4496926993663116"
+     crossorigin="anonymous">
+      </script>
 </head>
 <body>
 
@@ -99,3 +103,4 @@
 
 </body>
 </html>
+
