--- a/ishraq-step-main/ishraq-step-cours.html
+++ b/ishraq-step-main/ishraq-step-cours.html
@@ -8,6 +8,10 @@
   <link href="css/buttons.css" rel="stylesheet">
    <link href="css/video.css" rel="stylesheet">
   <link rel="icon" href="icon.jpg" type="image/x-icon">
+   <!--ads-->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4496926993663116"
+     crossorigin="anonymous">
+      </script>
 </head>
 
 <body>   
@@ -49,3 +53,4 @@
 </body>
 
 </html>
+
