--- a/ishraq-step-main/ishraq-step-youtupe.html
+++ b/ishraq-step-main/ishraq-step-youtupe.html
@@ -60,6 +60,10 @@
     border-radius: 10px;
   }
 </style>
+   <!--ads-->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4496926993663116"
+     crossorigin="anonymous">
+      </script>
 </head>
 <body>
 
@@ -149,3 +153,4 @@
 
 </body>
 </html>
+
