--- a/ishraq-step-main/chat/chat.html
+++ b/ishraq-step-main/chat/chat.html
@@ -38,6 +38,10 @@
     .user-modal .muted { color: #666; font-size: 13px; margin-bottom: 10px; }
     .user-modal .btn { width: 100%; margin-top: 8px; }
   </style>
+   <!--ads-->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4496926993663116"
+     crossorigin="anonymous">
+      </script>
 </head>
 <body>
   <div class="wrap">
@@ -311,4 +315,5 @@
   </script>
 </body>
 </html>
+
 
