--- a/ishraq-step-main/chat/start.html
+++ b/ishraq-step-main/chat/start.html
@@ -36,6 +36,10 @@
       opacity: 0.7;
     }
   </style>
+   <!--ads-->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4496926993663116"
+     crossorigin="anonymous">
+      </script>
 </head>
 <body>
   <div class="center-card">
