--- a/index.html
+++ b/index.html
@@ -79,11 +79,13 @@
       from { width: 0%; }
       to { width: 100%; }
     }
+
   </style>
    <!--ads-->
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4496926993663116"
      crossorigin="anonymous">
       </script>
+      <!--ads-->
 </head>
 <body>
 
