--- a/ishraq-step-main/update.html
+++ b/ishraq-step-main/update.html
@@ -18,7 +18,8 @@
   .videos-list{margin-top:20px}
   .video-item{background:white;border-radius:10px;padding:10px;margin-bottom:10px;box-shadow:0 2px 6px rgba(0,0,0,.2)}
   .video-item iframe{width:100%;border-radius:10px}
-  .edit-btn{background:#ff9800;border:none;padding:5px 8px;border-radius:6px;cursor:pointer;color:white;margin-top:5px}
+  .edit-btn{background:#ff9800;border:none;padding:5px 8px;border-radius:6px;cursor:pointer;color:white;margin-top:5px;margin-left:5px}
+  .delete-btn{background:#f44336;border:none;padding:5px 8px;border-radius:6px;cursor:pointer;color:white;margin-top:5px}
 </style>
 </head>
 <body>
@@ -182,9 +183,12 @@
         <h3>${escapeHtml(video.title)}</h3>
         <p>${escapeHtml(video.description)}</p>
         <button class="edit-btn" data-type="${escapeHtml(video.type)}" data-id="${escapeHtml(video.id)}">✏️ تعديل</button>
+        <button class="delete-btn" data-type="${escapeHtml(video.type)}" data-id="${escapeHtml(video.id)}">🗑️ حذف</button>
       `;
       const btn = div.querySelector('.edit-btn');
       btn.addEventListener('click', ()=> editVideo(video.type, video.id));
+      const deleteBtn = div.querySelector('.delete-btn');
+      deleteBtn.addEventListener('click', ()=> deleteVideo(video.type, video.id));
       videosContainer.appendChild(div);
     });
   }
@@ -205,6 +209,19 @@
 
   function escapeHtml(s){
     return (s+'').replace(/&/g,'&amp;').replace(/</g,'&lt;').replace(/>/g,'&gt;');
+  }
+
+  async function deleteVideo(type, id){
+    if(!confirm('هل أنت متأكد من حذف هذا الفيديو؟')){
+      return;
+    }
+    try {
+      await set(ref(db, `courses/${id}`), null);
+      alert('✅ تم حذف الفيديو');
+      showSection(type);
+    } catch(error){
+      alert('❌ حدث خطأ في الحذف: ' + error.message);
+    }
   }
 
 </script>
