--- a/ishraq-step-main/ishraq-step-cours.html
+++ b/ishraq-step-main/ishraq-step-cours.html
@@ -27,7 +27,7 @@
       </a>
       
       
-      <a href="#">
+      <a href="Downloads.html">
          <span></span>
          <span></span>
          <span></span>
