--- a/ishraq-step-main/chat/start.html
+++ b/ishraq-step-main/chat/start.html
@@ -76,7 +76,7 @@
     import { ref as dbRef, push, set } from 'https://www.gstatic.com/firebasejs/10.7.1/firebase-database.js';
     import { ref as storageRef, uploadBytesResumable, getDownloadURL } from 'https://www.gstatic.com/firebasejs/10.7.1/firebase-storage.js';
     
-    const logo = "shoag-eg"; 
+    const logo = "sohag-eg"; 
 
     const nameEl = document.getElementById('name');
     const avatarFileEl = document.getElementById('avatarFile');
