--- a/ishraq-step-main/index.html
+++ b/ishraq-step-main/index.html
@@ -34,10 +34,6 @@
         </svg>
         Ishraq step منصة
       </div>
-
-      <h1 id="main-title" class="title">خذ خطوتك الأولى نحو إشراق معرفي جديد</h1>
-      <p class="subtitle">هاذه المنصه من صنع الطالب محمد عبدالمهيمن و الطالب بدر حسام بكليه الحاسبات و الذكاء الاصطناعي</p>
-
       <div class="logo-wrap" aria-hidden="true">
         <div class="symbol" role="img" aria-label="رمز يمثل الإشراق والتعلم">
          
@@ -95,7 +91,18 @@
             <path d="M12 12a4 4 0 1 0 0-8 4 4 0 0 0 0 8z" fill="white" opacity="0.9"/>
             <path d="M3 20c1-4 7-6 9-6s8 2 9 6" stroke="rgba(255,255,255,0.08)" stroke-width="1.6" stroke-linecap="round"/>
           </svg>
-          جروب دردشة سوهاج
+          جروب دردشه
+        </button>
+
+        <!-- NEW: زر المنشورات -->
+        <button class="btn btn-posts" id="postsBtn" aria-label="المنشورات" onclick="location.href='posts.html'">
+          <!-- posts icon -->
+          <svg width="18" height="18" viewBox="0 0 24 24" fill="none" aria-hidden="true" xmlns="http://www.w3.org/2000/svg">
+            <rect x="3" y="5" width="18" height="4" rx="1" fill="white" opacity="0.95"/>
+            <rect x="3" y="11" width="18" height="4" rx="1" fill="white" opacity="0.8"/>
+            <rect x="3" y="17" width="18" height="2" rx="1" fill="white" opacity="0.6"/>
+          </svg>
+          المنشورات
         </button>
         
       </div>
