--- a/ishraq-step-main/ishraq-step-cours.html
+++ b/ishraq-step-main/ishraq-step-cours.html
@@ -12,6 +12,7 @@
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4496926993663116"
      crossorigin="anonymous">
       </script>
+      
 </head>
 
 <body>   
@@ -32,7 +33,7 @@
          <span></span>
          <span></span>
          <span></span>
-          الكتب الالكترونيه قريبا
+         الكتب الالكترونيه
       </a>
 
    
