--- a/ishraq-step-main/update/books.html
+++ b/ishraq-step-main/update/books.html
@@ -4,154 +4,291 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <title>📘 نشر الكتب - Ishraq Step</title>
+<link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;600;800&display=swap" rel="stylesheet">
 <style>
   body{font-family:Cairo, sans-serif; background: linear-gradient(135deg,#4caf50,#00bcd4); margin:0; padding:20px; color:#333; direction:rtl}
-  h1{text-align:center;color:white; margin-bottom:40px}
-  
-  .nav-buttons{display:flex; gap:10px; justify-content:center; margin-bottom:30px; flex-wrap:wrap}
-  .nav-btn{background:#fff; color:#4caf50; border:none; padding:10px 20px; border-radius:8px; cursor:pointer; font-weight:600; transition:all .3s}
-  .nav-btn:hover{transform:scale(1.05); box-shadow:0 5px 15px rgba(0,0,0,0.2)}
-  
-  .form{background:white;padding:15px;border-radius:12px;max-width:500px;margin:20px auto;box-shadow:0 4px 15px rgba(0,0,0,0.2)}
-  label{display:block;margin-top:10px;font-weight:bold}
-  input,textarea{width:100%;padding:8px;margin-top:5px;border:1px solid #ccc;border-radius:6px; box-sizing:border-box}
-  button{background:linear-gradient(90deg,#4caf50,#00bcd4);color:white;border:none;padding:10px;margin-top:15px;width:100%;border-radius:8px;cursor:pointer;font-size:16px; font-weight:600}
-  button:hover{opacity:.95}
-  
-  .books-list{margin-top:20px}
-  .book-item{background:white;border-radius:10px;padding:10px;margin-bottom:10px;box-shadow:0 2px 6px rgba(0,0,0,.2)}
-  .delete-btn{background:#f44336;border:none;padding:5px 8px;border-radius:6px;cursor:pointer;color:white;margin-top:5px}
-  .small{font-size:13px;color:#555;margin-top:6px}
-  .progress{height:8px;background:#eee;border-radius:6px;overflow:hidden;margin-top:8px}
+  .card{max-width:980px;margin:20px auto;background:#fff;padding:16px;border-radius:12px;box-shadow:0 6px 24px rgba(2,6,23,0.08)}
+  label{display:block;margin-top:10px;font-weight:700}
+  input,textarea,select{width:100%;padding:8px;margin-top:6px;border-radius:8px;border:1px solid #e6eef6}
+  .row{display:flex;gap:8px}
+  .row > *{flex:1}
+  .actions{display:flex;gap:8px;margin-top:12px;flex-wrap:wrap}
+  button{padding:10px 14px;border-radius:8px;border:0;cursor:pointer}
+  .primary{background:linear-gradient(90deg,#ff8a00,#ffd166);color:#08121a}
+  .muted{color:#667084;font-size:13px;margin-top:6px}
+  .preview{border:1px solid #eef2f7;padding:12px;border-radius:10px;margin-top:12px}
+  img.cover{max-width:140px;height:180px;object-fit:cover;border-radius:6px}
+  .list{margin-top:18px}
+  .list-item{border:1px solid #eef2f7;padding:10px;border-radius:8px;margin-bottom:10px;background:#fff;display:flex;gap:10px;align-items:center}
+  .list-item .meta{flex:1}
+  .small{font-size:12px;color:#666}
+  .progress{height:8px;background:#eee;border-radius:6px;overflow:hidden;margin-top:8px;display:none}
   .progress > span{display:block;height:100%;background:linear-gradient(90deg,#4caf50,#00bcd4);width:0%}
 </style>
 </head>
 <body>
+  <div class="card">
+    <h2>لوحة نشر الكتب (أدمن)</h2>
 
-<h1>📘 نشر الكتب</h1>
+    <label>معرّف الكتاب (لتعديل موجود):</label>
+    <input id="bookId" placeholder="اتركها فارغة لإنشاء جديد">
 
-<div class="nav-buttons">
-  <a href="courses.html" class="nav-btn">📹 الكورسات</a>
-  <a href="books.html" class="nav-btn" style="background:#4caf50; color:white;">📘 الكتب</a>
-  <a href="news.html" class="nav-btn">📰 الأخبار</a>
-</div>
+    <label>عنوان الكتاب:</label>
+    <input id="title">
 
-<div class="form">
-  <label>عنوان الكتاب:</label>
-  <input id="book-title" type="text">
+    <label>المؤلف:</label>
+    <input id="author" value="Ishraq Step">
 
-  <label>وصف الكتاب (اختياري):</label>
-  <textarea id="book-description"></textarea>
+    <label>الوصف المختصر:</label>
+    <input id="description">
 
-  <label>ملف الكتاب (PDF أو epub):</label>
-  <input id="book-file" type="file" accept=".pdf,.epub">
+    <label>تفاصيل (فهرس، محتوى):</label>
+    <textarea id="details" rows="4"></textarea>
 
-  <div class="progress" id="book-upload-progress" style="display:none"><span></span></div>
+    <div class="row">
+      <div>
+        <label>التصنيف:</label>
+        <input id="category" placeholder="مثال: برمجة">
+      </div>
+      <div>
+        <label>الصفحات:</label>
+        <input id="pages" type="number">
+      </div>
+      <div>
+        <label>الحجم:</label>
+        <input id="size" placeholder="مثال: 4.2 MB">
+      </div>
+    </div>
 
-  <button id="addBookBtn">📤 رفع الكتاب</button>
-</div>
+    <label>التقييم (0-5):</label>
+    <input id="rating" type="number" min="0" max="5" step="0.1" value="0">
 
-<div id="books-container" class="books-list"></div>
+    <div class="row" style="margin-top:8px">
+      <div>
+        <label>غلاف الكتاب (صورة):</label>
+        <input id="coverFile" type="file" accept="image/*">
+      </div>
+      <div>
+        <label>ملف الكتاب (PDF / epub):</label>
+        <input id="bookFile" type="file" accept=".pdf,.epub,application/pdf">
+      </div>
+    </div>
+
+    <div class="progress" id="uploadProgress"><span></span></div>
+
+    <div class="actions">
+      <button class="primary" id="saveBtn">حفظ ونشر / تحديث</button>
+      <button id="loadBtn">تحميل بيانات لِـ ID</button>
+      <button id="clearBtn">مسح الحقول</button>
+    </div>
+
+    <div class="muted">عند الحفظ يُنشأ id جديد (push) إذا تركت الحقل فارغاً. الحقول المخزنة: id, title, author, description, details, category, rating, pages, size, coverUrl, fileUrl, createdAt, updatedAt.</div>
+
+    <div class="preview" id="previewArea" aria-live="polite" hidden>
+      <h3 id="pvTitle"></h3>
+      <div style="display:flex;gap:12px;align-items:flex-start">
+        <img id="pvCover" class="cover" src="" alt="غلاف">
+        <div>
+          <div id="pvAuthor" class="muted"></div>
+          <div id="pvCategory" class="muted"></div>
+          <div id="pvPages" class="muted"></div>
+          <div id="pvRating" class="muted"></div>
+          <p id="pvDescription"></p>
+          <a id="pvFileLink" href="#" target="_blank" rel="noopener">فتح الملف (بعد الحفظ)</a>
+        </div>
+      </div>
+      <details style="margin-top:10px"><summary>تفاصيل كاملة</summary><div id="pvDetails" style="padding-top:8px"></div></details>
+    </div>
+
+    <div class="list" id="booksList"><div class="small">جاري تحميل الكتب...</div></div>
+  </div>
 
 <script type="module">
-  import { db } from '../chat/js/fb.js';
-  import { ref as dbRef, push, set, onValue } from 'https://www.gstatic.com/firebasejs/10.7.1/firebase-database.js';
-  import { getStorage, ref as storageRef, uploadBytesResumable, getDownloadURL } from 'https://www.gstatic.com/firebasejs/10.7.1/firebase-storage.js';
+  import { db, storage } from '../chat/js/fb.js';
+  import { ref as dbRef, push, set, update, get, child, onValue, remove } from 'https://www.gstatic.com/firebasejs/10.7.1/firebase-database.js';
+  import { ref as sRef, uploadBytesResumable, getDownloadURL } from 'https://www.gstatic.com/firebasejs/10.7.1/firebase-storage.js';
 
-  const bookTitleInput = document.getElementById('book-title');
-  const bookDescriptionInput = document.getElementById('book-description');
-  const bookFileInput = document.getElementById('book-file');
-  const addBookBtn = document.getElementById('addBookBtn');
-  const booksContainer = document.getElementById('books-container');
-  const bookProgress = document.getElementById('book-upload-progress');
+  const BOOKS_PATH = 'books';
+  const bookIdEl = document.getElementById('bookId');
+  const titleEl = document.getElementById('title');
+  const authorEl = document.getElementById('author');
+  const descriptionEl = document.getElementById('description');
+  const detailsEl = document.getElementById('details');
+  const categoryEl = document.getElementById('category');
+  const pagesEl = document.getElementById('pages');
+  const sizeEl = document.getElementById('size');
+  const ratingEl = document.getElementById('rating');
+  const coverFileEl = document.getElementById('coverFile');
+  const bookFileEl = document.getElementById('bookFile');
+  const saveBtn = document.getElementById('saveBtn');
+  const loadBtn = document.getElementById('loadBtn');
+  const clearBtn = document.getElementById('clearBtn');
+  const previewArea = document.getElementById('previewArea');
+  const pvTitle = document.getElementById('pvTitle');
+  const pvCover = document.getElementById('pvCover');
+  const pvAuthor = document.getElementById('pvAuthor');
+  const pvCategory = document.getElementById('pvCategory');
+  const pvPages = document.getElementById('pvPages');
+  const pvRating = document.getElementById('pvRating');
+  const pvDescription = document.getElementById('pvDescription');
+  const pvDetails = document.getElementById('pvDetails');
+  const pvFileLink = document.getElementById('pvFileLink');
+  const booksList = document.getElementById('booksList');
+  const uploadProgress = document.getElementById('uploadProgress');
+  const progressBar = uploadProgress.querySelector('span');
 
-  let booksData = {};
-  const storage = getStorage();
-  const booksRef = dbRef(db, 'books');
+  function nowIso(){ return new Date().toISOString(); }
+  function esc(s){ return (s||'').toString().replaceAll('&','&amp;').replaceAll('<','&lt;').replaceAll('>','&gt;'); }
 
-  onValue(booksRef, snapshot=>{
-    booksData = snapshot.val() || {};
-    showBooks();
+  clearBtn.addEventListener('click', () => {
+    bookIdEl.value=''; titleEl.value=''; authorEl.value='Ishraq Step'; descriptionEl.value=''; detailsEl.value=''; categoryEl.value=''; pagesEl.value=''; sizeEl.value=''; ratingEl.value='0';
+    coverFileEl.value=''; bookFileEl.value=''; previewArea.hidden=true;
   });
 
-  function escapeHtml(s){
-    return (s+'').replace(/&/g,'&amp;').replace(/</g,'&lt;').replace(/>/g,'&gt;');
-  }
-
-  addBookBtn.addEventListener('click', async (e)=>{
-    e.preventDefault();
-    const title = bookTitleInput.value.trim();
-    const description = bookDescriptionInput.value.trim();
-    const file = bookFileInput.files[0];
-
-    if(!title || !file){
-      alert('⚠️ يرجى إضافة عنوان والملف');
-      return;
-    }
-
-    const newRef = push(booksRef);
-    const id = newRef.key;
-    const storagePath = `books/${id}_${file.name}`;
-    const sRef = storageRef(storage, storagePath);
-    const uploadTask = uploadBytesResumable(sRef, file);
-
-    bookProgress.style.display = 'block';
-    const bar = bookProgress.querySelector('span');
-
-    uploadTask.on('state_changed',
-      (snapshot)=>{
-        const progress = (snapshot.bytesTransferred / snapshot.totalBytes) * 100;
-        bar.style.width = progress + '%';
-      },
-      (err)=>{
-        bookProgress.style.display = 'none';
-        alert('❌ خطأ في رفع الملف: ' + err.message);
-      },
-      async ()=>{
-        const downloadURL = await getDownloadURL(uploadTask.snapshot.ref);
-        const book = { title, description: description || '', url: downloadURL };
-        await set(newRef, book);
-        bookProgress.style.display = 'none';
-        bar.style.width = '0%';
-        alert('✅ تم رفع الكتاب');
-        bookTitleInput.value = '';
-        bookDescriptionInput.value = '';
-        bookFileInput.value = '';
-      }
-    );
+  const booksRef = dbRef(db, BOOKS_PATH);
+  onValue(booksRef, snapshot => {
+    const data = snapshot.val() || {};
+    renderBooksList(data);
+  }, err => {
+    booksList.innerHTML = '<div class="small">خطأ في تحميل الكتب</div>';
+    console.error(err);
   });
 
-  function showBooks(){
-    booksContainer.innerHTML = '';
-    if(!booksData || Object.keys(booksData).length === 0){
-      booksContainer.innerHTML = '<p style="color:white;">🚧 لا توجد كتب مضافة</p>';
-      return;
-    }
-    Object.entries(booksData).forEach(([id, b])=>{
+  function renderBooksList(data){
+    const entries = Object.entries(data || {});
+    if(!entries.length){ booksList.innerHTML = '<div class="small">لا توجد كتب مضافة</div>'; return; }
+    booksList.innerHTML = '';
+    entries.sort((a,b)=> new Date(b[1].createdAt||0) - new Date(a[1].createdAt||0));
+    entries.forEach(([id, book])=>{
       const div = document.createElement('div');
-      div.className = 'book-item';
+      div.className = 'list-item';
       div.innerHTML = `
-        <h3>${escapeHtml(b.title)}</h3>
-        <p class="small">${escapeHtml(b.description || '')}</p>
-        <a href="${escapeHtml(b.url)}" target="_blank">🔗 تحميل / فتح الكتاب</a>
-        <button class="delete-btn" data-id="${escapeHtml(id)}">🗑️ حذف الكتاب</button>
+        <img src="${esc(book.coverUrl || 'https://picsum.photos/120/160')}" style="width:80px;height:110px;object-fit:cover;border-radius:6px">
+        <div class="meta">
+          <div style="display:flex;justify-content:space-between;align-items:center">
+            <div><strong>${esc(book.title||'بدون عنوان')}</strong><div class="small">${esc(book.author||'')}</div></div>
+            <div class="small">${new Date(book.createdAt||0).toLocaleString('ar-SA')||''}</div>
+          </div>
+          <div class="small" style="margin-top:6px">${esc(book.description||'')}</div>
+        </div>
+        <div style="display:flex;flex-direction:column;gap:6px">
+          <button class="primary" data-id="${esc(id)}" data-action="edit">تعديل</button>
+          <button data-id="${esc(id)}" data-action="delete" style="background:#f44336;color:white;border-radius:6px;padding:6px 8px">حذف</button>
+          <a href="../book.html?id=${encodeURIComponent(id)}" style="text-align:center;padding:6px;border-radius:6px;background:#eee;color:#111;text-decoration:none">معاينة</a>
+        </div>
       `;
-      const del = div.querySelector('.delete-btn');
-      del.addEventListener('click', ()=> deleteBook(id));
-      booksContainer.appendChild(div);
+      const editBtn = div.querySelector('[data-action="edit"]');
+      const delBtn = div.querySelector('[data-action="delete"]');
+      editBtn.addEventListener('click', ()=> loadBookIntoForm(id));
+      delBtn.addEventListener('click', ()=> deleteBook(id));
+      booksList.appendChild(div);
     });
   }
 
-  async function deleteBook(id){
-    if(!confirm('هل أنت متأكد من حذف هذا الكتاب؟')) return;
-    try {
-      await set(dbRef(db, `books/${id}`), null);
-      alert('✅ تم حذف الكتاب');
-    } catch(err){
-      alert('❌ خطأ في الحذف: ' + err.message);
-    }
+  async function loadBookIntoForm(id){
+    try{
+      const snap = await get(child(dbRef(db), `${BOOKS_PATH}/${id}`));
+      if(!snap.exists()){ alert('لم يتم العثور على كتاب'); return; }
+      const b = snap.val();
+      bookIdEl.value = id;
+      titleEl.value = b.title || '';
+      authorEl.value = b.author || '';
+      descriptionEl.value = b.description || '';
+      detailsEl.value = b.details || '';
+      categoryEl.value = b.category || '';
+      pagesEl.value = b.pages || '';
+      sizeEl.value = b.size || '';
+      ratingEl.value = b.rating ?? 0;
+      pvCover.src = b.coverUrl || '';
+      pvTitle.textContent = b.title || '';
+      pvAuthor.textContent = 'المؤلف: ' + (b.author || '');
+      pvCategory.textContent = 'القسم: ' + (b.category || '');
+      pvPages.textContent = 'الصفحات: ' + (b.pages || '');
+      pvRating.textContent = 'التقييم: ' + (b.rating ?? 0);
+      pvDescription.textContent = b.description || '';
+      pvDetails.innerHTML = b.details || '';
+      pvFileLink.href = b.fileUrl || '#';
+      previewArea.hidden = false;
+      window.scrollTo({top:0,behavior:'smooth'});
+    }catch(err){ alert('خطأ في التحميل: ' + err.message); }
   }
 
+  loadBtn.addEventListener('click', async ()=>{
+    const id = bookIdEl.value.trim();
+    if(!id){ alert('أدخل id'); return; }
+    await loadBookIntoForm(id);
+  });
+
+  async function deleteBook(id){
+    if(!confirm('تأكيد حذف الكتاب؟')) return;
+    try{
+      await remove(dbRef(db, `${BOOKS_PATH}/${id}`));
+      alert('✅ تم الحذف');
+    }catch(err){ alert('خطأ في الحذف: ' + err.message); }
+  }
+
+  // حفظ / نشر
+  saveBtn.addEventListener('click', async ()=>{
+    const idInput = bookIdEl.value.trim();
+    const isEdit = !!idInput;
+    const refNode = isEdit ? dbRef(db, `${BOOKS_PATH}/${idInput}`) : push(dbRef(db, BOOKS_PATH));
+    const id = isEdit ? idInput : refNode.key;
+
+    let coverUrl = '';
+    let fileUrl = '';
+
+    try{
+      if (coverFileEl.files[0]) {
+        uploadProgress.style.display = 'block';
+        const cRef = sRef(storage, `books/${id}_cover_${coverFileEl.files[0].name}`);
+        const up = uploadBytesResumable(cRef, coverFileEl.files[0]);
+        await new Promise((res, rej) => up.on('state_changed',
+          (snap)=> progressBar.style.width = (snap.bytesTransferred / snap.totalBytes) * 100 + '%',
+          rej,
+          async ()=>{ coverUrl = await getDownloadURL(up.snapshot.ref); res(); }
+        ));
+      }
+      if (bookFileEl.files[0]) {
+        uploadProgress.style.display = 'block';
+        const fRef = sRef(storage, `books/${id}_file_${bookFileEl.files[0].name}`);
+        const up2 = uploadBytesResumable(fRef, bookFileEl.files[0]);
+        await new Promise((res, rej) => up2.on('state_changed',
+          (snap)=> progressBar.style.width = (snap.bytesTransferred / snap.totalBytes) * 100 + '%',
+          rej,
+          async ()=>{ fileUrl = await getDownloadURL(up2.snapshot.ref); res(); }
+        ));
+      }
+    }catch(err){
+      uploadProgress.style.display = 'none';
+      alert('خطأ في رفع الملفات: ' + err.message);
+      return;
+    }
+    uploadProgress.style.display = 'none';
+    progressBar.style.width = '0%';
+
+    const payload = {
+      id,
+      title: titleEl.value.trim(),
+      author: authorEl.value.trim(),
+      description: descriptionEl.value.trim(),
+      details: detailsEl.value.trim(),
+      category: categoryEl.value.trim(),
+      rating: parseFloat(ratingEl.value) || 0,
+      pages: pagesEl.value ? parseInt(pagesEl.value) : null,
+      size: sizeEl.value || '',
+      updatedAt: nowIso()
+    };
+    if (!isEdit) payload.createdAt = nowIso();
+    if (coverUrl) payload.coverUrl = coverUrl;
+    if (fileUrl) payload.fileUrl = fileUrl;
+
+    try{
+      if(isEdit) await update(refNode, payload); else await set(refNode, payload);
+      alert('✅ تم الحفظ. id = ' + id);
+      bookIdEl.value = id;
+      pvFileLink.href = payload.fileUrl || '#';
+    }catch(err){ alert('خطأ في الحفظ: ' + err.message); }
+  });
 </script>
 </body>
 </html>
