--- a/ishraq-step-main/Downloads.html
+++ b/ishraq-step-main/Downloads.html
@@ -13,12 +13,12 @@
     .categories { max-width: 1200px; margin: 0 auto 18px; display:flex; gap:8px; flex-wrap:wrap; justify-content:center }
     .category-btn { background:#eee;border-radius:20px;padding:8px 14px;cursor:pointer;font-weight:600;color:#333;border:1px solid transparent }
     .category-btn.active { background:#4CAF50;color:#fff;border-color:#3e8e41 }
-    .books-container { display: grid; grid-template-columns: repeat(auto-fill, minmax(250px, 1fr)); gap: 20px; max-width: 1200px; margin: 0 auto; }
-    .book-card { background: white; border-radius: 10px; box-shadow: 0 2px 10px rgba(0,0,0,0.1); padding: 20px; text-align: center; transition: transform 0.3s; }
+    .books-container { display: grid; grid-template-columns: repeat(auto-fill, minmax(150px, 1fr)); gap: 20px; max-width: 1200px; margin: 0 auto; }
+    .book-card { background: white; border-radius: 10px; box-shadow: 0 2px 10px rgba(0,0,0,0.1); padding: 10px; text-align: center; transition: transform 0.3s; }
     .book-card:hover { transform: translateY(-5px); box-shadow: 0 5px 20px rgba(0,0,0,0.2); }
-    .book-title { font-size: 18px; font-weight: 600; margin: 10px 0; color: #333; }
-    .book-description { font-size: 14px; color: #666; margin: 10px 0; min-height:40px }
-    .download-btn { background-color: #4CAF50; color: white; padding: 10px 14px; border: none; border-radius: 5px; cursor: pointer; font-size: 14px; font-weight: 600; transition: background-color 0.3s; text-decoration:none; display:inline-block }
+    .book-title { font-size: 14px; font-weight: 600; margin: 6px 0; color: #333; }
+    .book-description { font-size: 11px; color: #666; margin: 6px 0; min-height: 25px; }
+    .download-btn { background-color: #4CAF50; color: white; padding: 8px 10px; border: none; border-radius: 5px; cursor: pointer; font-size: 12px; font-weight: 600; transition: background-color 0.3s; text-decoration:none; display:inline-block }
     .download-btn:hover { background-color: #45a049; }
     .meta { font-size:13px;color:#666;margin-top:8px }
     .loading { text-align: center; font-size: 18px; color: #666; }
@@ -83,7 +83,7 @@
       });
     }
 
-    let cachedList = []; // مصفوفة [id, book]
+    let cachedList = []; 
 
     function renderList(list){
       booksContainer.innerHTML = '';
@@ -95,16 +95,15 @@
         const card = document.createElement('div');
         card.className = 'book-card';
         card.innerHTML = `
-          <img src="${esc(book.coverUrl || 'https://picsum.photos/300/420')}" alt="cover" style="width:100%;height:200px;object-fit:cover;border-radius:8px">
+          <img src="${esc(book.coverUrl || 'https://picsum.photos/300/420')}" alt="cover" style="width:100%;height:120px;object-fit:cover;border-radius:8px">
           <h3 class="book-title">${esc(book.title)}</h3>
-          <div class="meta">${esc(book.author || '')} • ${esc(book.category || '')}</div>
+          <div class="meta">${esc(book.category || '')}</div>
           <p class="book-description">${esc(book.description || '')}</p>
-          <div class="meta">الصفحات: ${esc(book.pages || '')} • الحجم: ${esc(book.size || '')} • التقييم: ${typeof book.rating !== 'undefined' ? esc(book.rating) : '—'}</div>
-          <div style="display:flex;gap:8px;justify-content:center;margin-top:12px">
-            <a class="download-btn" href="book-details.html?id=${encodeURIComponent(id)}">عرض التفاصيل</a>
+          <div style="display:flex;gap:6px;justify-content:center;margin-top:10px;flex-wrap:wrap">
+            <a class="download-btn" href="book-details.html?id=${encodeURIComponent(id)}">التفاصيل</a>
             ${book.fileUrl ? `<a class="download-btn" href="${esc(book.fileUrl)}" download>تحميل</a>` : ''}
           </div>
-          <div class="meta" style="margin-top:8px">نشر بتاريخ: ${dateLabel(book.createdAt)}</div>
+          <div class="meta" style="margin-top:6px;font-size:11px">${dateLabel(book.createdAt)}</div>
         `;
         booksContainer.appendChild(card);
       });
