--- a/ishraq-step-main/Downloads.html
+++ b/ishraq-step-main/Downloads.html
@@ -14,10 +14,12 @@
     .category-btn { background:#eee;border-radius:20px;padding:8px 14px;cursor:pointer;font-weight:600;color:#333;border:1px solid transparent }
     .category-btn.active { background:#4CAF50;color:#fff;border-color:#3e8e41 }
     .books-container { display: grid; grid-template-columns: repeat(auto-fill, minmax(150px, 1fr)); gap: 20px; max-width: 1200px; margin: 0 auto; }
-    .book-card { background: white; border-radius: 10px; box-shadow: 0 2px 10px rgba(0,0,0,0.1); padding: 4px; text-align: center; transition: transform 0.3s; }
+    .book-card { background: white; border-radius: 10px; box-shadow: 0 2px 10px rgba(0,0,0,0.1); padding: 0; text-align: center; transition: transform 0.3s; overflow: hidden; display: flex; flex-direction: column; }
     .book-card:hover { transform: translateY(-5px); box-shadow: 0 5px 20px rgba(0,0,0,0.2); }
-    .book-title { font-size: 12px; font-weight: 600; margin: 4px 0; color: #333; }
-    .book-description { font-size: 10px; color: #666; margin: 3px 0; min-height: 15px; line-height: 1.3; }
+    .book-cover-img { width: 100%; height: 120px; object-fit: cover; border-radius: 0; }
+    .book-title { font-size: 12px; font-weight: 600; margin: 4px 4px 0 4px; color: #333; }
+    .book-description { font-size: 10px; color: #666; margin: 3px 4px; min-height: 15px; line-height: 1.3; }
+    .book-actions { padding: 4px; display: flex; gap: 4px; justify-content: center; flex-wrap: wrap; }
     .download-btn { background-color: #4CAF50; color: white; padding: 8px 10px; border: none; border-radius: 5px; cursor: pointer; font-size: 12px; font-weight: 600; transition: background-color 0.3s; text-decoration:none; display:inline-block }
     .download-btn:hover { background-color: #45a049; }
     .meta { font-size:11px;color:#666;margin-top:4px;display:none; }
@@ -95,10 +97,10 @@
         const card = document.createElement('div');
         card.className = 'book-card';
         card.innerHTML = `
-          <img src="${esc(book.coverUrl || 'https://picsum.photos/300/420')}" alt="cover" style="width:100%;height:40px;object-fit:cover;border-radius:8px">
+          <img src="${esc(book.coverUrl || 'https://picsum.photos/300/420')}" alt="cover" class="book-cover-img">
           <h3 class="book-title">${esc(book.title)}</h3>
           <p class="book-description">${esc(book.description || '')}</p>
-          <div style="display:flex;gap:4px;justify-content:center;margin-top:6px;flex-wrap:wrap">
+          <div class="book-actions">
             <a class="download-btn" href="book-details.html?id=${encodeURIComponent(id)}" style="padding:5px 8px;font-size:11px">التفاصيل</a>
             ${book.fileUrl ? `<a class="download-btn" href="${esc(book.fileUrl)}" download style="padding:5px 8px;font-size:11px">تحميل</a>` : ''}
           </div>
